kubernetes/infrastructure2/configs/gateways/http-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: gateways
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: thetillhoff.de
      allowedRoutes:
        namespaces:
          from: All
