kubernetes/infrastructure2/configs/gateways/https-gateway-thetillhoff-de.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-gateway-thetillhoff-de
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-thetillhoff-de-root
      hostname: dev.thetillhoff.de
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: thetillhoff-de-tls-certificate
    # - name: https-thetillhoff-de-wildcard
    #   hostname: "*.dev.thetillhoff.de"
    #   port: 443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: thetillhoff-de-tls-certificate
