kubernetes/infrastructure2/configs/gateways/https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-gateway
  annotations:
    cert-manager.io/cluster-issuer: selfsigned # letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: https-gateway-tls-certificate
